@@ -409,6 +409,11 @@ The character or string to show in the tag.indicator column.  Defaults to +.
 The character or string to show in the depends.indicator column.  Defaults to +.
 
 .TP
+.B recurrence.confirmation=yes
+Controls whether changes to recurring tasks propagates to other child tasks with
+or without confirmation.  Defaults to yes.
+
+.TP
 .B recurrence.indicator=R
 The character or string to show in the recurrence_indicator column.  Defaults to R.
 
