@@ -117,7 +117,8 @@ int CmdModify::execute (std::string& output)
         // Task potentially has siblings - modify them.
         if (task->has ("parent"))
         {
-          if (confirm (STRING_CMD_MODIFY_RECUR))
+          if (! context.config.getBoolean ("recurrence.confirmation") ||
+              confirm (STRING_CMD_MODIFY_RECUR))
           {
             std::vector <Task> siblings = context.tdb2.siblings (*task);
             std::vector <Task>::iterator sibling;
@@ -148,7 +149,8 @@ int CmdModify::execute (std::string& output)
         {
           std::vector <Task> children = context.tdb2.children (*task);
           if (children.size () &&
-              confirm (STRING_CMD_MODIFY_RECUR))
+              (! context.config.getBoolean ("recurrence.confirmation") ||
+               confirm (STRING_CMD_MODIFY_RECUR)))
           {
             std::vector <Task>::iterator child;
             for (child = children.begin (); child != children.end (); ++child)
