@@ -90,7 +90,8 @@ int CmdPrepend::execute (std::string& output)
       // Prepend to siblings.
       if (task->has ("parent"))
       {
-        if (confirm (STRING_CMD_PREPEND_CONFIRM_R))
+        if (! context.config.getBoolean ("recurrence.confirmation") ||
+            confirm (STRING_CMD_PREPEND_CONFIRM_R))
         {
           std::vector <Task> siblings = context.tdb2.siblings (*task);
           std::vector <Task>::iterator sibling;
